# xnode

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  make.cmd  makefile.mgw  test.sh
.github/workflows/: ci.yml
cmake/: xnode-config.cmake.in
doc/: CHANGELOG  LICENSE.txt  type_conversions.md
include/: property_list.h  xarray.h  xnode.h  xnode_long_double.h  xnode_property_list.h  xnode_type_ext.h  xnode_utils.h  xnode_vector.h  xobject.h
include/details/: property_list.h  xnode_builtins.h
test/: CMakeLists.txt  cunit.h  property_list_test.cpp  xarray_of_test.cpp  xarray_of_versions_test.cpp  xarray_test.cpp  xnode_convert_test.cpp  xnode_overflow_test.cpp  xnode_test.cpp  xnode_tree_test.cpp  xnode_type_test.cpp  xobject_test.cpp
